--- a/medsos.html
+++ b/medsos.html
@@ -36,65 +36,65 @@
 
     <div class="container-fluid bg-dark text-light" style="height: 100vh">
       <div class="row text-center">
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Instagram Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Instagram</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Instagram</h5>
+              <p class="card-text">@mh_dhrmwn</p>
+              <a class="btn btn-outline-light" href="https://www.instagram.com/mh_dhrmwn_/" target="_blank">Link Instagram</a>
             </div>
           </div>
         </div>
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Tiktok Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Tiktok</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Tiktok</h5>
+              <p class="card-text">@wantapscleon</p>
+              <a class="btn btn-outline-light" href="https://www.tiktok.com/@wantapscleon" target="_blank">Link Tiktok</a>
             </div>
           </div>
         </div>
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Whatsapp Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Whatsapp</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Whatsapp</h5>
+              <p class="card-text">+6281806926697</p>
+              <a class="btn btn-outline-light" href="https://wa.me/qr/4EKBPECDJD6AO1" target="_blank">Link Whatsapp</a>
             </div>
           </div>
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Linkedin Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Linkedin</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Linkedin</h5>
+              <p class="card-text">@maisan-hanif-dharmawan</p>
+              <a class="btn btn-outline-light" href="https://www.linkedin.com/in/maisan-hanif-dharmawan-796b4a268/" target="_blank">Link Linkedin</a>
             </div>
           </div>
         </div>
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Youtube Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Youtube</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Youtube</h5>
+              <p class="card-text">@wantapscleon</p>
+              <a class="btn btn-outline-light" href="https://www.youtube.com/@wantapscleon5790" target="_blank">Link Youtube</a>
             </div>
           </div>
         </div>
-        <div class="col-4 border d-flex justify-content-center mt-5">
+        <div class="col-4 d-flex justify-content-center mt-5">
           <div class="card" style="width: 18rem">
             <img src="/Test/Kumpulan Foto/Twitter Logo.png" class="rounded mx-auto d-block" alt="..." style="width: 50%" />
             <div class="card-body text-light bg-dark">
-              <h5 class="card-title">Twitter</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title mt-4">Twitter</h5>
+              <p class="card-text">@dream1ess</p>
+              <a class="btn btn-outline-light" href="https://x.com/mesyaaannnn" target="_blank">Link Twitter</a>
             </div>
           </div>
         </div>
